<resources>
    <string name="app_name">G.tv</string>
    <string name="setting">设置</string>
    <string name="resume">Resume</string>
    <string name="cancel">取消</string>
    <string name="title_dialog">Tips</string>
    <string name="not_wx_pay">您未安装最新版本微信，不支持微信支付，请安装或升级微信版本</string>

    <string name="digits"></string>
    <string name="sure">确定</string>
    <string name="sure2">提交</string>
    <string name="sure3">立即开通</string>

    <string name="message_permission_rationale">授予下列权限以继续程序:\n\n%1$s</string>
    <string name="message_overlay_failed">您的电话不允许我们使用其他应用程序.</string>
    <string name="message_permission_always_failed">我们需要以下权限，请在设置中为我们开启：\n\n%1$s</string>

    <!--提示语-->
    <string name="error_phone">手机号码格式错误</string>
    <string name="error_phone1">手机号码或密码为空</string>
    <string name="error_">请输入完整</string>
    <string name="error_pwd_length">密码位于6~16位</string>
    <string name="please_phone">请输入手机号</string>
    <string name="please_code">请输入验证码</string>
    <string name="please_pwd1">请再次输入密码</string>
    <string name="please_pwd2">两次密码不一致</string>
    <string name="error_1">请阅读协议</string>
    <string name="not_set">未设定</string>
    <string name="edit">编辑</string>
    <string name="total_selection">全选</string>
    <string name="del">删除</string>
    <string name="error_label">请选择标签</string>

    <!--搜索-->
    <string name="home_keyword">请输入您要搜索的内容</string>

    <!--频道-->
    <string name="channel">频道</string>
    <string name="all">全部</string>
    <string name="all_channel">全部标签</string>
    <string name="hot_channel">热门标签</string>
    <string name="choice_channel">已选标签</string>
    <string name="label_screening">标签筛选</string>
    <string name="channel_desc">频道详情</string>

    <!--图库-->
    <string name="gallery">图库</string>
    <string name="collection">收藏</string>
    <string name="download">下载</string>
    <string name="share">分享</string>
    <string name="gallery_desc">图库详情</string>

    <!--个人中心-->
    <string name="me">个人中心</string>
    <string name="not_logged_me">您还未登录，登录后获得更多观影次数</string>
    <string name="not_logged">登录/注册>></string>
    <string name="invitation_code">我的邀请码：</string>
    <string name="me1">剩余观影次数</string>
    <string name="me3">今日可观影次数</string>
    <string name="me2">推广一人增加3次观影次数</string>
    <string name="member_center">会员中心</string>
    <string name="promote">我要推广</string>
    <string name="system_notification">系统通知</string>
    <string name="system_notification2">系统消息</string>
    <string name="feedback_feedback">意见反馈</string>
    <string name="historical_records">历史记录</string>
    <string name="my_caching">我的缓存</string>
    <string name="my_collection">我的收藏</string>
    <string name="account_management">账号管理</string>
    <string name="clean_caching">清理缓存</string>
    <string name="updated_version">更新版本</string>
    <string name="user_protocol">用户协议</string>
    <string name="set">设置</string>
    <string name="update_head">修改头像</string>
    <string name="update_pwd">修改密码</string>
    <string name="user_name">个人昵称</string>
    <string name="phone_number">手机号</string>
    <string name="change_password">Change Password</string>
    <string name="member">尊贵会员</string>
    <string name="historical_sightseeing">历史浏览</string>
    <string name="my_cache">我的缓存</string>
    <string name="opinion">意见反馈</string>
    <string name="msg_desc">系统公告</string>
    <string name="my_problem">我遇到的问题</string>
    <string name="problem_desc">详细描述（必填）</string>
    <string name="problem_desc2">请尽量详细描述问题，以便我们及时为您解决\n（10-100）字</string>
    <string name="extension">推广</string>
    <string name="reward_jine">奖励金金额</string>
    <string name="promotion_number">已推广人数</string>
    <string name="promotion_number2">推广人数</string>
    <string name="promotion_member_number">已推广会员人数</string>
    <string name="promotion_member_number2">推广会员人数</string>
    <string name="promotion_member_price">已推广会员金额</string>
    <string name="promotion_member_price2">已推广金额</string>
    <string name="promotion_member_price3">推广金额</string>
    <string name="get_price">已获奖励金</string>
    <string name="promotion_rules">推广规则</string>
    <string name="achievement">本月业绩</string>
    <string name="performance_desc">业绩明细</string>
    <string name="more">更多>></string>
    <string name="extension_share">推广分享</string>
    <string name="my_extension_code">我的推广码</string>
    <string name="save_img">保存图片</string>
    <string name="copy_link">复制链接</string>
    <string name="download_app">扫码下载视频APP</string>
    <string name="play_video">无限视频在线播放，千万影片免费下载</string>
    <string name="description_membership_interests">会员权益说明</string>
    <string name="join">立即加入</string>
    <string name="renew">立即续费</string>
    <string name="purchase_member">购买会员</string>
    <string name="purchase_member2">开通会员，观看下载无限制>></string>
    <string name="sign_out">退出登录</string>
    <string name="balance_details">余额明细</string>

    <!--登录-->
    <string name="login1">Login</string>
    <string name="login">登录</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_pwd">请输入新密码</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="new_user_registration">新用户注册</string>
    <string name="reset_password">resetPassword</string>
    <string name="forget_pwd2">重置密码</string>
    <string name="input_code">请输入短信验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="register1">Sign In</string>
    <string name="register">注册完成</string>
    <string name="input_invitation_code">输入邀请码，更多观影次数 （选填）</string>

    <!--影片详情-->
    <string name="video_play">影片播放</string>
    <string name="label">标签：</string>
    <string name="like">猜你喜欢</string>

    <!--搜索-->
    <string name="hot_search">热门搜索</string>




    <string-array name="opinion_list">
        <item>无法播放</item>
        <item>播放卡顿</item>
        <item>标签错误</item>
        <item>分类错误</item>
        <item>搜索不准</item>
        <item>无法缓存</item>
        <item>视频不全</item>
    </string-array>

</resources>
