<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/include_top"/>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:padding="@dimen/px30"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.AppCompatTextView
                    android:text="@string/my_problem"
                    style="@style/Tv14black" />

                <com.yc.gtv.weight.WithScrollGridView
                    android:numColumns="2"
                    android:id="@+id/gridView"
                    android:layout_marginTop="@dimen/px30"
                    android:verticalSpacing="@dimen/px20"
                    android:horizontalSpacing="@dimen/px20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <android.support.v7.widget.AppCompatTextView
                    android:text="@string/problem_desc"
                    android:layout_marginTop="@dimen/px60"
                    style="@style/Tv14black" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_text"
                    android:background="@drawable/dotted_line"
                    android:padding="@dimen/px30"
                    android:layout_marginTop="@dimen/px30"
                    android:minLines="5"
                    android:gravity="top"
                    android:maxLines="10"
                    android:textSize="@dimen/size26"
                    android:hint="@string/problem_desc2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.flyco.roundview.RoundTextView
                    android:id="@+id/bt_submit"
                    android:layout_marginTop="@dimen/px80"
                    android:text="@string/sure2"
                    app:rv_cornerRadius="@dimen/px10"
                    android:textColor="@color/white"
                    app:rv_backgroundColor="@color/reb_FC739D"
                    app:rv_backgroundPressColor="@color/reb_CC5B7E"
                    style="@style/RoundTextView" />

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </LinearLayout>


</layout>