<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <android.support.constraint.ConstraintLayout
        android:background="@mipmap/login_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/fy_close"
            android:padding="@dimen/px60"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:background="@mipmap/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </FrameLayout>

        <TextView
            android:id="@+id/tv_login"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/px170"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/login1"
            android:drawableTop="@mipmap/login_word"
            android:textColor="@color/white"
            style="@style/Tv16black" />

        <com.flyco.roundview.RoundLinearLayout
            android:id="@+id/ly_pp"
            android:layout_marginTop="@dimen/px170"
            android:layout_marginLeft="@dimen/px30"
            android:layout_marginRight="@dimen/px30"
            app:rv_backgroundColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:rv_cornerRadius="@dimen/px10">

            <LinearLayout
                android:layout_marginTop="@dimen/px10"
                android:layout_marginBottom="@dimen/px10"
                android:layout_marginLeft="@dimen/px50"
                android:layout_marginRight="@dimen/px50"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_marginRight="@dimen/px30"
                    android:background="@mipmap/login_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_phone"
                    android:maxLength="11"
                    android:padding="@dimen/px20"
                    android:inputType="number"
                    android:background="@null"
                    android:textColorHint="@color/black_999999"
                    android:textColor="@color/black_999999"
                    android:hint="@string/input_phone"
                    android:textSize="@dimen/px32"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <View
                android:layout_marginLeft="@dimen/px20"
                android:layout_marginRight="@dimen/px20"
                style="@style/divider_1"/>

            <LinearLayout
                android:layout_marginTop="@dimen/px10"
                android:layout_marginBottom="@dimen/px10"
                android:layout_marginLeft="@dimen/px50"
                android:layout_marginRight="@dimen/px50"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_marginRight="@dimen/px30"
                    android:background="@mipmap/login_mm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_pwd"
                    android:maxLength="16"
                    android:inputType="textPassword"
                    android:padding="@dimen/px20"
                    android:background="@null"
                    android:textColorHint="@color/black_999999"
                    android:textColor="@color/black_999999"
                    android:hint="@string/input_pwd"
                    android:textSize="@dimen/px32"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/iv_pwd"
                    android:background="@null"
                    android:button="@drawable/cb_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </com.flyco.roundview.RoundLinearLayout>

        <com.flyco.roundview.RoundTextView
            android:id="@+id/bt_submit"
            android:layout_marginTop="@dimen/px80"
            app:layout_constraintTop_toBottomOf="@id/ly_pp"
            android:text="@string/login"
            app:rv_cornerRadius="@dimen/px10"
            android:textColor="@color/black_333333"
            app:rv_backgroundColor="@color/white"
            app:rv_backgroundPressColor="@color/white_f4f4f4"
            style="@style/RoundTextView" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/bt_forget_pwd"
                android:layout_marginTop="@dimen/px40"
                android:layout_marginLeft="@dimen/px30"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bt_submit"
                android:textColor="@color/white"
                android:text="@string/forget_pwd"
                style="@style/Tv13black" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/bt_register"
            android:layout_marginTop="@dimen/px40"
            android:layout_marginRight="@dimen/px30"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bt_submit"
            android:textColor="@color/white"
            android:text="@string/new_user_registration"
            style="@style/Tv13black" />

    </android.support.constraint.ConstraintLayout>

</layout>